Commit debugging left
